    between maps.
  - Fixed a walking bug that caused monsters to walk trough certain objects.
  - type="3" in bodyinfo.xml is now correctly interpreted by the core.
  - Exploit bugfix for locked containers.
  - The status only shows the gold directly in your backpack now. (performance issues)
 * Definition Changes:
  - Added the mage AI to most creatures.
  - Adjusted carving sheeps.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
  - Fixed skeletal steeds stats and skills.
  - Added stackable burned food that is used when cooking fails.
  - Added ranged weapons + ammo to orc scout, ratmen archer, meer captain and juka lord.
  - Added colored samurai armor.
  - Reorganized base armor categories.
  - New folder for defines: definitions/defines/
  - Applied the index.xml branches to colored armor.
  - Added lightsources to fire elementals, wisps and horde minions.
  - Added bones to bone_magi and body parts to horde minions, zombies and others.
  - Added colored weapons. Note: Only the metalic weapons.
  - Sorted out the samurai weapons by type and fixed properties.
  - Ranged weapons set to 10 instead of 12.
  - Price fixes for arrows/bolts.
  - Fixed potion kegs.
  - Cleanups with equipment for the cleaner xml style.
  - Gave guards colored hair.
  - NPC skill defines are now: <skill id="skilldef">value</skill>
  - Gold now has weight.
 * Python Script Changes:
  - Fixed bug #0000369. (Equip possible although item.movable = 3)
  - Fixed bug #0000361. (Pets don't follow trough gate)
  - Added xoffset, yoffset and zoffset to socket.attachmultitarget. (housing.deed)
  - Fixed a runebook bug. (Refuses to work when full)
  - Rewrote parts of the runebook.
  - Added support for creature based poison immunity.